Fixed bug with word-break in post title and post content

--- a/src/app/admin-panel/admin-panel.component.scss
+++ b/src/app/admin-panel/admin-panel.component.scss
@@ -1,7 +1,7 @@
 .post {
   position: relative;
 
-  margin: 0 0 30px 0;
+  margin: 0 0 20px 0;
 
   &:last-child {
     margin: 0;
@@ -10,6 +10,7 @@
   &-title {
     font-size: 50px;
     padding: 0 240px 0 0;
+    word-break: break-all;
   }
   
   &-author {
