--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -5,6 +5,7 @@
     font-size: 50px;
     font-weight: bold;
     color: rgb(114, 103, 219);
+    word-break: break-all;
   }
   
   &-author {
@@ -17,6 +18,7 @@
     margin: 10px 0 0 0;
 
     font-size: 25px;
+    word-break: break-all;
   }
 }
 
